--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,46 +1,43 @@
 ---
-const personalImageAlt = "Brian Padilla"
-import Badge from "@/components/Badge.astro"
-import LinkedInIcon from "@/components/icons/LinkedIn.astro"
-import MailIcon from "@/components/icons/Mail.astro"
-import SocialPill from "@/components/SocialPill.astro"
+// Importar el archivo JSON
+import cv from 'public/cv.json';
+import Badge from "@/components/Badge.astro";
+import LinkedInIcon from "@/components/icons/LinkedIn.astro";
+import MailIcon from "@/components/icons/Mail.astro";
+import SocialPill from "@/components/SocialPill.astro";
+
+// Extraer los datos del JSON
+const personalData = cv.personalData;
 ---
 
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/me.jpg"
-      alt={personalImageAlt}
+      src={personalData.imageSrc}
+      alt={personalData.personalImageAlt}
     />
     <a
-      href="http://www.linkedin.com/in/brianpadilla01"
+      href={personalData.linkedInUrl}
       target="_blank"
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
     >
-      <Badge>Disponible para trabajar</Badge>
+      <Badge>{personalData.badgeText}</Badge>
     </a>
   </div>
-  <h1
-    class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
-  >
-    Hey, soy Brian Padilla
+  <h1 class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white">
+    Hey, soy {personalData.name}
   </h1>
-  <p
-    class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300"
-  >
-    +15 años de experiencia. <strong
-      >Ingeniero de Software y Creador de Contenido sobre Programación</strong
-    > de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web
-    únicas.
+  <p class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300">
+    {personalData.description}
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="brianpadilla.work@gmail.com">
+    <SocialPill href={`mailto:${personalData.email}`}>
       <MailIcon class="size-4" />
       Contáctame
     </SocialPill>
-    <SocialPill href="https://www.linkedin.com/in/brianpadilla01/">
+    <SocialPill href={personalData.linkedInUrl}>
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
