--- a/src/pages/curriculumvitae.astro
+++ b/src/pages/curriculumvitae.astro
@@ -141,9 +141,26 @@ const data = {
             font-size: 16px;
             margin-bottom: 20px;
         }
+        #back-Btn{
+            position :fixed;
+            z-index: 600;
+            bottom: 2%;
+            right: 2%;
+            width: 3rem;
+            height: 3rem;
+            background-color: #333;
+            border-radius: 100%;
+            padding: 0.5rem;
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: #3333333c 5px;
+        }
+        
     </style>
 </head>
 <body class="c31 doc-content">
+    <a href="/" id="back-Btn"> v<a/>
     <main id="pdf-content">
         <section id="header">
             <div style="display: flex; flex-direction: column; margin: auto;">
