--- a/src/components/icons/ReactJS.astro
+++ b/src/components/icons/ReactJS.astro
@@ -1,12 +1,10 @@
-<svg
-  {...Astro.props}
-  xmlns="http://www.w3.org/2000/svg"
-  width="256"
-  height="256"
-  preserveAspectRatio="xMidYMid"
-  viewBox="0 0 256 256"
->
-  <!-- Add specific SVG path data for React -->
-  <circle cx="128" cy="128" r="128" fill="#61DAFB" />
-  <path d="M123.23,61.96a6,6,0,0,0-5.46,0C91.32,70.66,75.54,90.84,75.54,128s15.78,57.34,42.23,66.04a6,6,0,0,0,5.46,0C164.68,185.34,180.46,165.16,180.46,128S164.68,70.66,123.23,61.96Z" fill="#FFF" />
+
+  <svg width="100%" height="100%"   {...Astro.props}
+  viewBox="-10.5 -9.45 21 18.9" fill="#149ECA" xmlns="http://www.w3.org/2000/svg">
+    <circle cx="0" cy="0" r="2"></circle>
+    <g stroke="#149ECA" stroke-width="1" fill="none">
+        <ellipse rx="10" ry="4.5"></ellipse>
+        <ellipse rx="10" ry="4.5" transform="rotate(60)"></ellipse>
+        <ellipse rx="10" ry="4.5" transform="rotate(120)"></ellipse>
+    </g>
 </svg>
