--- a/src/components/icons/ReactNative.astro
+++ b/src/components/icons/ReactNative.astro
@@ -1,11 +1,10 @@
-<svg
-  {...Astro.props}
-  xmlns="http://www.w3.org/2000/svg"
-  width="256"
-  height="256"
-  preserveAspectRatio="xMidYMid"
-  viewBox="0 0 256 256"
->
-  <circle cx="128" cy="128" r="128" fill="#61DAFB" />
-  <path d="M128,256A128,128,0,0,0,256,128,128,128,0,0,0,128,0,128,128,0,0,0,0,128,128,128,0,0,0,128,256ZM129.58,104.29c14.84,0,26.87,12.05,26.87,26.91s-12.03,26.91-26.87,26.91-26.87-12.05-26.87-26.91,12.03-26.91,26.87-26.91Zm0-14.59c-23.25,0-42.45,19.16-42.45,42.5S106.32,175.5,129.58,175.5,172,156.34,172,133.92,152.83,89.7,129.58,89.7Z" fill="#FFF" />
+
+<svg width="100%" height="100%"   {...Astro.props}
+viewBox="-10.5 -9.45 21 18.9" fill="#4f46e5" xmlns="http://www.w3.org/2000/svg">
+  <circle cx="0" cy="0" r="2"></circle>
+  <g stroke="#4f46e5" stroke-width="1" fill="none">
+      <ellipse rx="10" ry="4.5"></ellipse>
+      <ellipse rx="10" ry="4.5" transform="rotate(60)"></ellipse>
+      <ellipse rx="10" ry="4.5" transform="rotate(120)"></ellipse>
+  </g>
 </svg>
