--- a/src/pages/Proyectos.astro
+++ b/src/pages/Proyectos.astro
@@ -51,19 +51,22 @@ const TAGS = {
 };
 
 // Usamos el archivo JSON para definir los proyectos
-const PROJECTS = data.PROJECTS.map((project) => ({
+const PROJECTS = data.PROJECTS.map((project: { tags: any[]; }) => ({
   ...project,
   tags: project.tags.map((tag) => {
     const tagKey = tag.replace("TAGS.", "") as keyof typeof TAGS;
-    return TAGS[tagKey] ? TAGS[tagKey] : null; // Verifica si la clave existe en TAGS
-  }).filter(Boolean), // Filtra los valores null
+    return TAGS[tagKey] ? TAGS[tagKey] : null;
+  }).filter(Boolean),
 }));
----
 
+const ITEMS_PER_PAGE = 4;
+
+
+---
 
 <Layout title="Proyectos" description="Esta página contiene todos los proyectos">
   <SectionContainer id="proyectos">
-    <div style="display: flex; flex-direction: row; justify-content: space-between; margin-top:3rem; margin-bottom:2rem">
+    <div style="display: flex; flex-direction: row; justify-content: space-between; margin-top:3rem; margin-bottom:2rem;">
       <TitleSection>
         <CodeIcon class="size-7" />
         Proyectos
@@ -79,8 +82,8 @@ const PROJECTS = data.PROJECTS.map((project) => ({
       </div>
     </div>
 
-    <div class="flex flex-col gap-y-16">
-      {PROJECTS.map(({ image, title, description, tags, link, github }) => (
+    <div class="flex flex-col gap-y-16" id="project-list">
+      {PROJECTS.map(({ image, title, description, tags, link, github }:any) => (
         <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0 project">
           <div class="w-full md:w-1/2">
             <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
@@ -92,7 +95,7 @@ const PROJECTS = data.PROJECTS.map((project) => ({
             <h3 class="text-2xl font-bold text-gray-800 dark:text-gray-100">{title}</h3>
             <div class="flex flex-wrap mt-2">
               <ul class="flex flex-row mb-2 gap-x-2">
-                {tags.map((tag) => (
+                {tags.map((tag :any) => (
                   tag && (
                     <li> 
                       <span class={`flex gap-x-2 rounded-full text-xs ${tag.class} py-1 px-2 technologies`}>
@@ -123,40 +126,35 @@ const PROJECTS = data.PROJECTS.map((project) => ({
         </article>
       ))}
     </div>
+    
+    <div class="flex justify-center space-x-4 mt-8">
+      <button
+        id="prevButton"
+        class="px-4 py-2 bg-gray-300 rounded"
+      >
+        Anterior
+      </button>
+      
+      <button
+        id="nextButton"
+        class="px-4 py-2 bg-gray-300 rounded"
+      >
+        Siguiente
+      </button>
+    </div>
   </SectionContainer>
   <script>
-    const filterProjects = (searchTerm: string) => {
-      const projectElements = document.querySelectorAll('.project');
-  
-      projectElements.forEach((project) => {
-        const titleElement = project.querySelector('h3');
-        const descriptionElement = project.querySelector('.description');
-        const technologiesElement = project.querySelector('.technologies');
-        
-        if (titleElement && descriptionElement && technologiesElement) {
-          const title = titleElement?.textContent?.toLowerCase()  ?? ''; 
-          const description = descriptionElement?.textContent?.toLowerCase()  ?? ''; 
-          const technologies = Array.from(technologiesElement.querySelectorAll('span')).map(span => span.textContent?.toLowerCase() ?? '').join(' ');
-          const projectElement = project as HTMLElement;
-          ; 
+    // Función para consumir el archivo JSON
+    async function fetchProjects() {
+      const response = await fetch('/cv.json');
+      const data = await response.json();
+      return data.PROJECTS
+      // Aquí puedes manipular los datos obtenidos según necesites
+    }
 
-          if (title.includes(searchTerm) || description.includes(searchTerm) || technologies.includes(searchTerm)) {
-            projectElement.style.display = ''; // Muestra el proyecto
-          } else {
-            projectElement.style.display = 'none'; // Oculta el proyecto
-          }
-        }
-      });
-    };
-  
-    document.addEventListener('DOMContentLoaded', () => {
-      const searchInput = document.getElementById('search-input');
-      if (searchInput) {
-        searchInput.addEventListener('input', (e) => {
-          const target = e.target as HTMLInputElement;
-          filterProjects(target.value.toLowerCase());
-        });
-      }
-    });
+    // Llamamos a la función para obtener los datos cuando se cargue la página
+    fetchProjects();
+   
   </script>
+  
 </Layout>
