--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,13 +17,14 @@ import ButtonLink from "@/components/ButtonLink.astro"
   title={cv.aboutme.name}
   description="Contrata a brian para crear tu aplicación web o móvil. Desarrollador Web y Creador de Contenido. Especializado en crear aplicaciones únicas."
 >
-  <main class="px-4">
+  <main class="px-4 pt-5 mt-5">
     <SectionContainer class="py-16 md:py-36">
       <Hero>
       </slot>
     </Hero>
     </SectionContainer>
-    <div class="space-y-24">
+
+    <div class="space-y-24 mt-5">
     <SectionContainer id="experiencia">
       <TitleSection>
         <Briefcase class="size-8" />
