--- a/src/pages/curriculumvitae.astro
+++ b/src/pages/curriculumvitae.astro
@@ -181,6 +181,7 @@ import data from 'public/cv.json'; // Asegúrate de ajustar la ruta según tu es
                 <p class="c11" id="github"><a href="{data.contact.github}">{data.contact.github}</a></p>
                 <p class="c11" id="email"><a href="mailto:{data.contact.email}">{data.contact.email}</a></p>
                 <p class="c11" id="linkedin"><a href="{data.contact.linkedin}">{data.contact.linkedin}</a></p>
+                <p class="c11" id="Porfolio"><a href="{data.contact.portfolio}">{data.contact.portfolio}</a></p>
             </div>
         </section>
         <p class="c32"><span class="c13">PERFIL</span></p>
